--- a/src/components/Introduction/Introduction.css
+++ b/src/components/Introduction/Introduction.css
@@ -4,7 +4,9 @@
   background: #396afc;
   background: -webkit-linear-gradient(to left, #2948ff, #396afc);
   background: linear-gradient(to left, #2948ff, #396afc);
-  min-width: 100vw;
+
+  width: 100vw;
+  max-width: 100%;
   min-height: 100vh;
   text-align: center;
 }
